# toshi-hazard-post

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker_environ  makefile  mkdocs.yml  package-lock.json  package.json  pynamodb_settings.py  pyproject.toml  serverless.yml  setup.cfg  thp_config.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  publish.yml  run-tests.yml
cbc/: arrow_performance.md  inspection_0.ipy  manip_0.ipy
demo/: SLT_TAG_FINAL_0.1.json  SLT_TEST.json  aggregation_demo.toml  convert_to_json.py  gmcm_logic_tree_medium.json  hazard_NSHM_v1.0.4.toml  hazard_micro.toml  hazard_mini.toml  hazard_v2.toml  hazard_v2_micro.toml  hazard_v2_mini.toml  slt_tag_final.toml  slt_tag_final_0.1.toml  slt_test.toml  srm_logic_tree_micro.json
docs/: api.md  architecture.md  changelog.md  index.md  installation.md  performance_notes.md  usage.md
docs/api/: aggregation_calc.md  calculators.md  data.md  logic_tree.md
scripts/: cli.py  container_task.sh  thp_v2.py
tests/: __init__.py  test_aggregate_rlzs.py  test_aggregation.py  test_args.py  test_aws.py  test_branch_combinator.py  test_calc.py  test_calculators.py  test_deaggregation.py  test_end_to_end.py  test_get_inputs.py  test_grid_aws.py  test_local_config.py  test_locations.py  test_logic_tree.py  test_task_generator.py  test_toshi_hazard_post.py
tests/db_tests/: test_arrow_aggregation.py
tests/fixtures/: SLT_test_cor.json  THP_model_001.json  hazard_lt_files.toml  sample_task_args.py  sites_w_vs30.csv  source_branches.json  source_branches_correlated.json
tests/fixtures/aggregate_rlz/: aggregate_probs.npy  aggs.json  args.json  branch_probs.npy  branch_weights.npy  logic_tree.json  rlz_combs.json  source_branches.json  values.npy  weighted_sum.npy  weights.npy
tests/fixtures/aggregation/: hazard_agg_kwargs.json  lvls_expected.npy  rlz_combs.json  rlz_combs_corr.json  task_args.json  vals_expected.npy
tests/fixtures/aws/: logic_tree.json
tests/fixtures/branch_combinator/: SLT_test_cor.json  SLT_test_vs30.json  gmcm_branches.json  gmcm_branches_correlated.json  metadata.json  source_branches.json  source_branches_correlated.json  weight_combs.json
tests/fixtures/calc/: hazard_agg.npy  quantiles_expected.npy
tests/fixtures/calculators/: agg_0p2.npy  weights.npy  weights_and_values.json
tests/fixtures/deaggregation/: config.toml  index.json
tests/fixtures/end_to_end/: aggregations_275_PGA_-34.500~173.000.npy  hazard.toml  rlz_probs.csv  rlz_probs.pq  srm_logic_tree_no_slab.json
tests/fixtures/local_config/: thp_config.toml  user_config.toml
tests/fixtures/locations/: config.toml  logic_tree.py
tests/fixtures/logic_tree/: flattened_lt.json  hazard_gt.json  hazard_gt_expected.json  metadata.json
tests/version2/: test_args.py  test_arrow_aggregation.py  test_calc.py  test_calculators.py  test_config.py  test_data.py  test_end_to_end.py  test_get_inputs.py  test_local_config.py  test_logic_tree.py  test_task_generator.py
tests/version2/fixtures/: glt_v1.0.4.json  hazard.toml  sites_vs30s.csv  sites_vs30s_lt0.csv  sites_vs30s_str.csv
tests/version2/fixtures/calc/: agg_rates.npy  branch_rates.npy
tests/version2/fixtures/calculators/: rates.json
tests/version2/fixtures/end_to_end/: aggregations_275_PGA_-34.500~173.000.npy  rlz_probs.pkl  thp_config.toml
tests/version2/fixtures/local_config/: thp_config.toml  user_config.toml
toshi_hazard_post/: __init__.py  aggregation.py  aggregation_args.py  aggregation_calc.py  aggregation_setup.py  branch_combinator.py  calculators.py  cli.py  data.py  data_functions.py  local_config.py  locations.py  logging.yaml  logic_tree.py  parallel.py  ths_mock.py  toshi_api_support.py
toshi_hazard_post/hazard_aggregation/: __init__.py  aggregate_rlzs.py  aggregation.py  aggregation_config.py  aggregation_task.py  aws_aggregation.py  aws_deaggregation.py  deaggregation.py  deaggregation_task.py  locations.py  toshi_api_support.py
toshi_hazard_post/hazard_grid/: aws_gridded_hazard.py  grid_task.py  gridded_hazard.py  gridded_poe.py  misc.py
toshi_hazard_post/logic_tree/: branch_combinator.py  hazard_logic_tree.py  logic_tree.py
toshi_hazard_post/util/: __init__.py  batch.py  file_utils.py  sns.py  toshi_client.py  util.py
toshi_hazard_post/version2/: aggregation.py  aggregation_args.py  aggregation_arrow.py  aggregation_calc.py  aggregation_calc_arrow.py  aggregation_config.py  aggregation_setup.py  calculators.py  data.py  data_arrow.py  local_config.py  logic_tree.py  mock_ths.py  parallel.py  ths_mock.py
