[tool]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true

[tool.poetry]
name = "toshi-hazard-post"
version = "0.1.0"
homepage = "https://github.com/chrisbc/toshi-hazard-post"
description = "Hazard post-processing pipeline as serverless AWS infrastructure."
authors = ["GNS Science New Zealand <chrisbc@artisan.co.nz>"]
readme = "README.md"
license =  "AGPL-3.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

packages = [
    { include = "toshi_hazard_post" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.scripts]
thp = 'scripts.cli:main'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
boto3 = "^1.24.34"
nshm-toshi-client = "^1.0.0"
PyYAML = "^6.0"
requests = "^2.28.1"
requests-toolbelt = "^0.9.1"
toml = "^0.10.2"
click = "^8.1.3"
toshi-hazard-store = "0.5.5"
pandas = "^1.4.3"
numba = "^0.56.0"


[tool.poetry.dev-dependencies]

black  = { version = "^22.3"}
isort  = { version = "^5.8.0"}
flake8  = { version = "^3.9.2"}
flake8-docstrings = { version = "^1.6.0", optional = true }
mypy = {version = "^0.900"}
pytest = { version = "^6.2.4"}
pytest-cov  = { version = "^2.12.0"}
tox = { version = "^3.20.1"}
virtualenv  = { version = "^20.2.2", optional = true}
# pip  = { version = "^20.3.1", optional = true}

mkdocs  = { version = "^1.1.2"}
mkdocs-include-markdown-plugin  = { version = "^1.0.0"}
mkdocs-material  = { version = "^6.1.7"}
mkdocstrings  = { version = "^0.18.0"}
mkdocs-material-extensions  = { version = "^1.0.1"}
mkdocs-autorefs = {version = "^0.3.1"}

pymdown-extensions = {version = "^9.4"}
mkdocstrings-python = {version = "^0.6.5"}
mkdocs-pymdownx-material-extras = "^2.0.3"

twine  = { version = "^3.3.0"}

pre-commit = {version = "^2.12.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1"}
jinja2 = {version = "3.0.3"}
types-PyYAML = "^6.0.10"
types-toml = "^0.10.8"
types-requests = "^2.28.5"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
