[tool]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true

[tool.poetry]
name = "toshi-hazard-post"
version = "0.3.1"
homepage = "https://github.com/chrisbc/toshi-hazard-post"
description = "Hazard post-processing pipeline as serverless AWS infrastructure."
authors = ["GNS Science New Zealand <chrisbc@artisan.co.nz>"]
readme = "README.md"
license = "GPL-3.0-only"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

packages = [
    { include = "toshi_hazard_post" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.scripts]
thp = 'scripts.cli:thp'

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
nzshm-model = "^0.3.0"
toshi-hazard-store = "^0.7.2"
numba = "^0.57.1"
boto3 = "^1.28.11"
nshm-toshi-client = "^1.0.0"
pyyaml = "^6.0.1"
toml = "^0.10.2"
click = "^8.1.6"
requests-toolbelt = "^1.0.0"


[tool.poetry.group.dev.dependencies]
# twine  = { version = "^3.3.0"}

# pre-commit = {version = "^2.12.0", optional = true}
# jinja2 = {version = "3.0.3"}

pytest = "^7.4.0"
tox = "^4.6.4"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.4.1"
pytest-cov = "^4.1.0"
virtualenv = "^20.24.2"
types-toml = "^0.10.8.7"
mkdocs = "^1.4.3"
mkdocs-include-markdown-plugin = "^4.0.4"
mkdocs-material = "^9.1.19"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.2.1"
bump2version = "^1.0.1"
mkdocs-pymdownx-material-extras = "^2.4.3"
types-pyyaml = "^6.0.12.11"
types-requests = "^2.31.0.2"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    ]


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
