[tool]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true

[tool.poetry]
name = "toshi-hazard-post"
version = "0.4.0"
homepage = "https://github.com/ucgmsim/toshi-hazard-post"
description = "Hazard post-processing pipeline as serverless AWS infrastructure."
authors = ["GNS Science New Zealand <chrisbc@artisan.co.nz>"]
readme = "README.md"
license =  "AGPL-3.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]

packages = [
    { include = "toshi_hazard_post" },
    { include = "tests", format = "sdist" },
    { include = "scripts" },
]

[tool.poetry.scripts]
thp = 'scripts.cli:thp'

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
toml = "^0.10.2"
numpy = "^1.26.4"
numba = "^0.59.1"
boto3 = {version = "^1.34.82", optional = true}
pyarrow = {version = "^15.0.2", extras = ["pandas"]}
nzshm-common = {git = "https://github.com/GNS-Science/nzshm-common-py.git", rev = "pre-release"}
pandas = "~2.0.3"
click = "^8.1.7"
python-dotenv = "^1.0.1"
toshi-hazard-store = {git = "https://github.com/ucgmsim/toshi-hazard-store.git", rev = "pre-release_get_realizations"}
nzshm-model = {git = "https://github.com/GNS-Science/nzshm-model.git", rev = "pre-release"}

[tool.poetry.group.dev.dependencies]
black  = { version = "^22.3"}
isort  = { version = "^5.8.0"}
flake8  = { version = "^3.9.2"}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest = { version = "^6.2.4"}
pytest-cov  = { version = "^2.12.0"}
virtualenv  = { version = "^20.2.2", optional = true}
twine  = { version = "^3.3.0"}
pre-commit = {version = "^2.12.0", optional = true}
bump2version = {version = "^1.0.1"}
jinja2 = {version = "3.0.3"}
# types-PyYAML = "^6.0.10"
types-toml = "^0.10.8"
types-requests = "^2.28.5"
tox = "^4.6.4"
mypy = "^1.8.0"
mkdocs = "^1.5.3"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.5.14"
mkdocs-material-extensions = "^1.3.1"
mkdocs-autorefs = "^1.0.1"
mkdocs-pymdownx-material-extras = "^2.5.6"
pymdown-extensions = "^10.7.1"
mkdocstrings = "^0.24.3"
mkdocstrings-python = "^1.9.2"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

aws = ["boto3"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore=scratch"
